// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductCardRender /> should not render the discount badge when the is no discount 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ProductCardRender
    hideName={false}
    hidePrice={false}
    hideRating={false}
    product={
      Object {
        "featuredImageBaseUrl": null,
        "featuredImageUrl": null,
        "id": "PR0DUCTID",
        "name": "Product Name",
        "price": Object {
          "currency": "EUR",
          "discount": 0,
          "info": "Price Info",
          "unitPrice": 5,
          "unitPriceStriked": 10,
        },
        "rating": Object {
          "average": 80,
          "count": 4,
          "reviewCount": 3,
        },
      }
    }
    productId="PR0DUCTID"
    titleRows={3}
    url="/some/url"
  >
    <Link
      href="/some/url"
      state={Object {}}
      tagName="a"
    >
      <ProductImage
        alt="Product Name"
        itemProp="image"
        resolutions={
          Array [
            Object {
              "height": 440,
              "width": 440,
            },
          ]
        }
        src={null}
      />
      <ProductBadges
        location="productCard"
        productId="PR0DUCTID"
      />
      <div
        className={
          Object {
            "data-css-1rbh2c4": "",
          }
        }
      >
        <RatingStars
          value={80}
        />
        <ProductCardTitle
          rows={3}
          style={Object {}}
          title="Product Name"
        >
          <ProductName
            className="css-by38mh"
            name="Product Name"
            rows={3}
            style={Object {}}
            testId="Productname: Product Name"
          >
            Product Name
          </ProductName>
        </ProductCardTitle>
        <MapPriceHint
          productId="PR0DUCTID"
        />
        <OrderQuantityHint
          productId="PR0DUCTID"
        />
        <ProductCardPrice
          product={
            Object {
              "featuredImageBaseUrl": null,
              "featuredImageUrl": null,
              "id": "PR0DUCTID",
              "name": "Product Name",
              "price": Object {
                "currency": "EUR",
                "discount": 0,
                "info": "Price Info",
                "unitPrice": 5,
                "unitPriceStriked": 10,
              },
              "rating": Object {
                "average": 80,
                "count": 4,
                "reviewCount": 3,
              },
            }
          }
          style={Object {}}
        >
          <div
            style={Object {}}
          >
            <Portal
              name="PRODUCT_ITEM_PRICE_BEFORE"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            />
            <Portal
              name="PRODUCT_ITEM_PRICE"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            >
              <ProductGridPrice
                product={
                  Object {
                    "featuredImageBaseUrl": null,
                    "featuredImageUrl": null,
                    "id": "PR0DUCTID",
                    "name": "Product Name",
                    "price": Object {
                      "currency": "EUR",
                      "discount": 0,
                      "info": "Price Info",
                      "unitPrice": 5,
                      "unitPriceStriked": 10,
                    },
                    "rating": Object {
                      "average": 80,
                      "count": 4,
                      "reviewCount": 3,
                    },
                  }
                }
              />
            </Portal>
            <Portal
              name="PRODUCT_ITEM_PRICE_AFTER"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            />
          </div>
        </ProductCardPrice>
      </div>
    </Link>
  </ProductCardRender>
</Provider>
`;

exports[`<ProductCardRender /> should not render the rating stars when there is no average rating 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ProductCardRender
    hideName={false}
    hidePrice={false}
    hideRating={false}
    product={
      Object {
        "featuredImageBaseUrl": null,
        "featuredImageUrl": null,
        "id": "PR0DUCTID",
        "name": "Product Name",
        "price": Object {
          "currency": "EUR",
          "discount": 50,
          "info": "Price Info",
          "unitPrice": 5,
          "unitPriceStriked": 10,
        },
        "rating": Object {
          "average": 0,
          "count": 4,
          "reviewCount": 3,
        },
      }
    }
    productId="PR0DUCTID"
    titleRows={3}
    url="/some/url"
  >
    <Link
      href="/some/url"
      state={Object {}}
      tagName="a"
    >
      <ProductImage
        alt="Product Name"
        itemProp="image"
        resolutions={
          Array [
            Object {
              "height": 440,
              "width": 440,
            },
          ]
        }
        src={null}
      />
      <ProductBadges
        location="productCard"
        productId="PR0DUCTID"
      >
        <ProductCardBadge
          productId="PR0DUCTID"
          style={Object {}}
          value={-50}
        >
          <div
            className={
              Object {
                "data-css-1hbxai8": "",
              }
            }
            style={Object {}}
          >
            <Portal
              name="product-item.discount.before"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            />
            <Portal
              name="product-item.discount"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            >
              <DiscountBadge
                className=""
                discount={null}
                display="small"
                text="-50%"
              >
                <div
                  aria-label="cart.discount: -50%"
                  className="ui-shared__discount-badge"
                  data-test-id="-50%"
                  tabIndex={-1}
                >
                  <Text
                    aria-hidden={true}
                    className="css-7wvaon  theme__discount-badge"
                    params={
                      Array [
                        null,
                      ]
                    }
                    string="-50%"
                  >
                    -50%
                  </Text>
                </div>
              </DiscountBadge>
            </Portal>
            <Portal
              name="product-item.discount.after"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            />
          </div>
        </ProductCardBadge>
      </ProductBadges>
      <div
        className={
          Object {
            "data-css-1rbh2c4": "",
          }
        }
      >
        <ProductCardTitle
          rows={3}
          style={Object {}}
          title="Product Name"
        >
          <ProductName
            className="css-by38mh"
            name="Product Name"
            rows={3}
            style={Object {}}
            testId="Productname: Product Name"
          >
            Product Name
          </ProductName>
        </ProductCardTitle>
        <MapPriceHint
          productId="PR0DUCTID"
        />
        <OrderQuantityHint
          productId="PR0DUCTID"
        />
        <ProductCardPrice
          product={
            Object {
              "featuredImageBaseUrl": null,
              "featuredImageUrl": null,
              "id": "PR0DUCTID",
              "name": "Product Name",
              "price": Object {
                "currency": "EUR",
                "discount": 50,
                "info": "Price Info",
                "unitPrice": 5,
                "unitPriceStriked": 10,
              },
              "rating": Object {
                "average": 0,
                "count": 4,
                "reviewCount": 3,
              },
            }
          }
          style={Object {}}
        >
          <div
            style={Object {}}
          >
            <Portal
              name="PRODUCT_ITEM_PRICE_BEFORE"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            />
            <Portal
              name="PRODUCT_ITEM_PRICE"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            >
              <ProductGridPrice
                product={
                  Object {
                    "featuredImageBaseUrl": null,
                    "featuredImageUrl": null,
                    "id": "PR0DUCTID",
                    "name": "Product Name",
                    "price": Object {
                      "currency": "EUR",
                      "discount": 50,
                      "info": "Price Info",
                      "unitPrice": 5,
                      "unitPriceStriked": 10,
                    },
                    "rating": Object {
                      "average": 0,
                      "count": 4,
                      "reviewCount": 3,
                    },
                  }
                }
              />
            </Portal>
            <Portal
              name="PRODUCT_ITEM_PRICE_AFTER"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            />
          </div>
        </ProductCardPrice>
      </div>
    </Link>
  </ProductCardRender>
</Provider>
`;

exports[`<ProductCardRender /> should render as expected 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ProductCardRender
    hideName={false}
    hidePrice={false}
    hideRating={false}
    product={
      Object {
        "featuredImageBaseUrl": null,
        "featuredImageUrl": null,
        "id": "PR0DUCTID",
        "name": "Product Name",
        "price": Object {
          "currency": "EUR",
          "discount": 50,
          "info": "Price Info",
          "unitPrice": 5,
          "unitPriceStriked": 10,
        },
        "rating": Object {
          "average": 80,
          "count": 4,
          "reviewCount": 3,
        },
      }
    }
    productId="PR0DUCTID"
    titleRows={3}
    url="/some/url"
  >
    <Link
      href="/some/url"
      state={Object {}}
      tagName="a"
    >
      <ProductImage
        alt="Product Name"
        itemProp="image"
        resolutions={
          Array [
            Object {
              "height": 440,
              "width": 440,
            },
          ]
        }
        src={null}
      />
      <ProductBadges
        location="productCard"
        productId="PR0DUCTID"
      >
        <ProductCardBadge
          productId="PR0DUCTID"
          style={Object {}}
          value={-50}
        >
          <div
            className={
              Object {
                "data-css-1hbxai8": "",
              }
            }
            style={Object {}}
          >
            <Portal
              name="product-item.discount.before"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            />
            <Portal
              name="product-item.discount"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            >
              <DiscountBadge
                className=""
                discount={null}
                display="small"
                text="-50%"
              >
                <div
                  aria-label="cart.discount: -50%"
                  className="ui-shared__discount-badge"
                  data-test-id="-50%"
                  tabIndex={-1}
                >
                  <Text
                    aria-hidden={true}
                    className="css-7wvaon  theme__discount-badge"
                    params={
                      Array [
                        null,
                      ]
                    }
                    string="-50%"
                  >
                    -50%
                  </Text>
                </div>
              </DiscountBadge>
            </Portal>
            <Portal
              name="product-item.discount.after"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            />
          </div>
        </ProductCardBadge>
      </ProductBadges>
      <div
        className={
          Object {
            "data-css-1rbh2c4": "",
          }
        }
      >
        <RatingStars
          value={80}
        />
        <ProductCardTitle
          rows={3}
          style={Object {}}
          title="Product Name"
        >
          <ProductName
            className="css-by38mh"
            name="Product Name"
            rows={3}
            style={Object {}}
            testId="Productname: Product Name"
          >
            Product Name
          </ProductName>
        </ProductCardTitle>
        <MapPriceHint
          productId="PR0DUCTID"
        />
        <OrderQuantityHint
          productId="PR0DUCTID"
        />
        <ProductCardPrice
          product={
            Object {
              "featuredImageBaseUrl": null,
              "featuredImageUrl": null,
              "id": "PR0DUCTID",
              "name": "Product Name",
              "price": Object {
                "currency": "EUR",
                "discount": 50,
                "info": "Price Info",
                "unitPrice": 5,
                "unitPriceStriked": 10,
              },
              "rating": Object {
                "average": 80,
                "count": 4,
                "reviewCount": 3,
              },
            }
          }
          style={Object {}}
        >
          <div
            style={Object {}}
          >
            <Portal
              name="PRODUCT_ITEM_PRICE_BEFORE"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            />
            <Portal
              name="PRODUCT_ITEM_PRICE"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            >
              <ProductGridPrice
                product={
                  Object {
                    "featuredImageBaseUrl": null,
                    "featuredImageUrl": null,
                    "id": "PR0DUCTID",
                    "name": "Product Name",
                    "price": Object {
                      "currency": "EUR",
                      "discount": 50,
                      "info": "Price Info",
                      "unitPrice": 5,
                      "unitPriceStriked": 10,
                    },
                    "rating": Object {
                      "average": 80,
                      "count": 4,
                      "reviewCount": 3,
                    },
                  }
                }
              />
            </Portal>
            <Portal
              name="PRODUCT_ITEM_PRICE_AFTER"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            />
          </div>
        </ProductCardPrice>
      </div>
    </Link>
  </ProductCardRender>
</Provider>
`;

exports[`<ProductCardRender /> should render with one row for the product name 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ProductCardRender
    hideName={false}
    hidePrice={false}
    hideRating={false}
    product={
      Object {
        "featuredImageBaseUrl": null,
        "featuredImageUrl": null,
        "id": "PR0DUCTID",
        "name": "Product Name",
        "price": Object {
          "currency": "EUR",
          "discount": 50,
          "info": "Price Info",
          "unitPrice": 5,
          "unitPriceStriked": 10,
        },
        "rating": Object {
          "average": 80,
          "count": 4,
          "reviewCount": 3,
        },
      }
    }
    productId="PR0DUCTID"
    titleRows={1}
    url="/some/url"
  >
    <Link
      href="/some/url"
      state={Object {}}
      tagName="a"
    >
      <ProductImage
        alt="Product Name"
        itemProp="image"
        resolutions={
          Array [
            Object {
              "height": 440,
              "width": 440,
            },
          ]
        }
        src={null}
      />
      <ProductBadges
        location="productCard"
        productId="PR0DUCTID"
      >
        <ProductCardBadge
          productId="PR0DUCTID"
          style={Object {}}
          value={-50}
        >
          <div
            className={
              Object {
                "data-css-1hbxai8": "",
              }
            }
            style={Object {}}
          >
            <Portal
              name="product-item.discount.before"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            />
            <Portal
              name="product-item.discount"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            >
              <DiscountBadge
                className=""
                discount={null}
                display="small"
                text="-50%"
              >
                <div
                  aria-label="cart.discount: -50%"
                  className="ui-shared__discount-badge"
                  data-test-id="-50%"
                  tabIndex={-1}
                >
                  <Text
                    aria-hidden={true}
                    className="css-7wvaon  theme__discount-badge"
                    params={
                      Array [
                        null,
                      ]
                    }
                    string="-50%"
                  >
                    -50%
                  </Text>
                </div>
              </DiscountBadge>
            </Portal>
            <Portal
              name="product-item.discount.after"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            />
          </div>
        </ProductCardBadge>
      </ProductBadges>
      <div
        className={
          Object {
            "data-css-1rbh2c4": "",
          }
        }
      >
        <RatingStars
          value={80}
        />
        <ProductCardTitle
          rows={1}
          style={Object {}}
          title="Product Name"
        >
          <ProductName
            className="css-by38mh"
            name="Product Name"
            rows={1}
            style={Object {}}
            testId="Productname: Product Name"
          >
            Product Name
          </ProductName>
        </ProductCardTitle>
        <MapPriceHint
          productId="PR0DUCTID"
        />
        <OrderQuantityHint
          productId="PR0DUCTID"
        />
        <ProductCardPrice
          product={
            Object {
              "featuredImageBaseUrl": null,
              "featuredImageUrl": null,
              "id": "PR0DUCTID",
              "name": "Product Name",
              "price": Object {
                "currency": "EUR",
                "discount": 50,
                "info": "Price Info",
                "unitPrice": 5,
                "unitPriceStriked": 10,
              },
              "rating": Object {
                "average": 80,
                "count": 4,
                "reviewCount": 3,
              },
            }
          }
          style={Object {}}
        >
          <div
            style={Object {}}
          >
            <Portal
              name="PRODUCT_ITEM_PRICE_BEFORE"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            />
            <Portal
              name="PRODUCT_ITEM_PRICE"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            >
              <ProductGridPrice
                product={
                  Object {
                    "featuredImageBaseUrl": null,
                    "featuredImageUrl": null,
                    "id": "PR0DUCTID",
                    "name": "Product Name",
                    "price": Object {
                      "currency": "EUR",
                      "discount": 50,
                      "info": "Price Info",
                      "unitPrice": 5,
                      "unitPriceStriked": 10,
                    },
                    "rating": Object {
                      "average": 80,
                      "count": 4,
                      "reviewCount": 3,
                    },
                  }
                }
              />
            </Portal>
            <Portal
              name="PRODUCT_ITEM_PRICE_AFTER"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            />
          </div>
        </ProductCardPrice>
      </div>
    </Link>
  </ProductCardRender>
</Provider>
`;

exports[`<ProductCardRender /> should render without name 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ProductCardRender
    hideName={true}
    hidePrice={false}
    hideRating={false}
    product={
      Object {
        "featuredImageBaseUrl": null,
        "featuredImageUrl": null,
        "id": "PR0DUCTID",
        "name": "Product Name",
        "price": Object {
          "currency": "EUR",
          "discount": 50,
          "info": "Price Info",
          "unitPrice": 5,
          "unitPriceStriked": 10,
        },
        "rating": Object {
          "average": 80,
          "count": 4,
          "reviewCount": 3,
        },
      }
    }
    productId="PR0DUCTID"
    titleRows={3}
    url="/some/url"
  >
    <Link
      href="/some/url"
      state={Object {}}
      tagName="a"
    >
      <ProductImage
        alt="Product Name"
        itemProp="image"
        resolutions={
          Array [
            Object {
              "height": 440,
              "width": 440,
            },
          ]
        }
        src={null}
      />
      <ProductBadges
        location="productCard"
        productId="PR0DUCTID"
      >
        <ProductCardBadge
          productId="PR0DUCTID"
          style={Object {}}
          value={-50}
        >
          <div
            className={
              Object {
                "data-css-1hbxai8": "",
              }
            }
            style={Object {}}
          >
            <Portal
              name="product-item.discount.before"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            />
            <Portal
              name="product-item.discount"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            >
              <DiscountBadge
                className=""
                discount={null}
                display="small"
                text="-50%"
              >
                <div
                  aria-label="cart.discount: -50%"
                  className="ui-shared__discount-badge"
                  data-test-id="-50%"
                  tabIndex={-1}
                >
                  <Text
                    aria-hidden={true}
                    className="css-7wvaon  theme__discount-badge"
                    params={
                      Array [
                        null,
                      ]
                    }
                    string="-50%"
                  >
                    -50%
                  </Text>
                </div>
              </DiscountBadge>
            </Portal>
            <Portal
              name="product-item.discount.after"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            />
          </div>
        </ProductCardBadge>
      </ProductBadges>
      <div
        className={
          Object {
            "data-css-1rbh2c4": "",
          }
        }
      >
        <RatingStars
          value={80}
        />
        <MapPriceHint
          productId="PR0DUCTID"
        />
        <OrderQuantityHint
          productId="PR0DUCTID"
        />
        <ProductCardPrice
          product={
            Object {
              "featuredImageBaseUrl": null,
              "featuredImageUrl": null,
              "id": "PR0DUCTID",
              "name": "Product Name",
              "price": Object {
                "currency": "EUR",
                "discount": 50,
                "info": "Price Info",
                "unitPrice": 5,
                "unitPriceStriked": 10,
              },
              "rating": Object {
                "average": 80,
                "count": 4,
                "reviewCount": 3,
              },
            }
          }
          style={Object {}}
        >
          <div
            style={Object {}}
          >
            <Portal
              name="PRODUCT_ITEM_PRICE_BEFORE"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            />
            <Portal
              name="PRODUCT_ITEM_PRICE"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            >
              <ProductGridPrice
                product={
                  Object {
                    "featuredImageBaseUrl": null,
                    "featuredImageUrl": null,
                    "id": "PR0DUCTID",
                    "name": "Product Name",
                    "price": Object {
                      "currency": "EUR",
                      "discount": 50,
                      "info": "Price Info",
                      "unitPrice": 5,
                      "unitPriceStriked": 10,
                    },
                    "rating": Object {
                      "average": 80,
                      "count": 4,
                      "reviewCount": 3,
                    },
                  }
                }
              />
            </Portal>
            <Portal
              name="PRODUCT_ITEM_PRICE_AFTER"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            />
          </div>
        </ProductCardPrice>
      </div>
    </Link>
  </ProductCardRender>
</Provider>
`;

exports[`<ProductCardRender /> should render without prices 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ProductCardRender
    hideName={false}
    hidePrice={true}
    hideRating={false}
    product={
      Object {
        "featuredImageBaseUrl": null,
        "featuredImageUrl": null,
        "id": "PR0DUCTID",
        "name": "Product Name",
        "price": Object {
          "currency": "EUR",
          "discount": 50,
          "info": "Price Info",
          "unitPrice": 5,
          "unitPriceStriked": 10,
        },
        "rating": Object {
          "average": 80,
          "count": 4,
          "reviewCount": 3,
        },
      }
    }
    productId="PR0DUCTID"
    titleRows={3}
    url="/some/url"
  >
    <Link
      href="/some/url"
      state={Object {}}
      tagName="a"
    >
      <ProductImage
        alt="Product Name"
        itemProp="image"
        resolutions={
          Array [
            Object {
              "height": 440,
              "width": 440,
            },
          ]
        }
        src={null}
      />
      <ProductBadges
        location="productCard"
        productId="PR0DUCTID"
      />
      <div
        className={
          Object {
            "data-css-1rbh2c4": "",
          }
        }
      >
        <RatingStars
          value={80}
        />
        <ProductCardTitle
          rows={3}
          style={Object {}}
          title="Product Name"
        >
          <ProductName
            className="css-by38mh"
            name="Product Name"
            rows={3}
            style={Object {}}
            testId="Productname: Product Name"
          >
            Product Name
          </ProductName>
        </ProductCardTitle>
        <MapPriceHint
          productId="PR0DUCTID"
        />
        <OrderQuantityHint
          productId="PR0DUCTID"
        />
      </div>
    </Link>
  </ProductCardRender>
</Provider>
`;

exports[`<ProductCardRender /> should render without rating 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ProductCardRender
    hideName={false}
    hidePrice={false}
    hideRating={true}
    product={
      Object {
        "featuredImageBaseUrl": null,
        "featuredImageUrl": null,
        "id": "PR0DUCTID",
        "name": "Product Name",
        "price": Object {
          "currency": "EUR",
          "discount": 50,
          "info": "Price Info",
          "unitPrice": 5,
          "unitPriceStriked": 10,
        },
        "rating": Object {
          "average": 80,
          "count": 4,
          "reviewCount": 3,
        },
      }
    }
    productId="PR0DUCTID"
    titleRows={3}
    url="/some/url"
  >
    <Link
      href="/some/url"
      state={Object {}}
      tagName="a"
    >
      <ProductImage
        alt="Product Name"
        itemProp="image"
        resolutions={
          Array [
            Object {
              "height": 440,
              "width": 440,
            },
          ]
        }
        src={null}
      />
      <ProductBadges
        location="productCard"
        productId="PR0DUCTID"
      >
        <ProductCardBadge
          productId="PR0DUCTID"
          style={Object {}}
          value={-50}
        >
          <div
            className={
              Object {
                "data-css-1hbxai8": "",
              }
            }
            style={Object {}}
          >
            <Portal
              name="product-item.discount.before"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            />
            <Portal
              name="product-item.discount"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            >
              <DiscountBadge
                className=""
                discount={null}
                display="small"
                text="-50%"
              >
                <div
                  aria-label="cart.discount: -50%"
                  className="ui-shared__discount-badge"
                  data-test-id="-50%"
                  tabIndex={-1}
                >
                  <Text
                    aria-hidden={true}
                    className="css-7wvaon  theme__discount-badge"
                    params={
                      Array [
                        null,
                      ]
                    }
                    string="-50%"
                  >
                    -50%
                  </Text>
                </div>
              </DiscountBadge>
            </Portal>
            <Portal
              name="product-item.discount.after"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            />
          </div>
        </ProductCardBadge>
      </ProductBadges>
      <div
        className={
          Object {
            "data-css-1rbh2c4": "",
          }
        }
      >
        <ProductCardTitle
          rows={3}
          style={Object {}}
          title="Product Name"
        >
          <ProductName
            className="css-by38mh"
            name="Product Name"
            rows={3}
            style={Object {}}
            testId="Productname: Product Name"
          >
            Product Name
          </ProductName>
        </ProductCardTitle>
        <MapPriceHint
          productId="PR0DUCTID"
        />
        <OrderQuantityHint
          productId="PR0DUCTID"
        />
        <ProductCardPrice
          product={
            Object {
              "featuredImageBaseUrl": null,
              "featuredImageUrl": null,
              "id": "PR0DUCTID",
              "name": "Product Name",
              "price": Object {
                "currency": "EUR",
                "discount": 50,
                "info": "Price Info",
                "unitPrice": 5,
                "unitPriceStriked": 10,
              },
              "rating": Object {
                "average": 80,
                "count": 4,
                "reviewCount": 3,
              },
            }
          }
          style={Object {}}
        >
          <div
            style={Object {}}
          >
            <Portal
              name="PRODUCT_ITEM_PRICE_BEFORE"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            />
            <Portal
              name="PRODUCT_ITEM_PRICE"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            >
              <ProductGridPrice
                product={
                  Object {
                    "featuredImageBaseUrl": null,
                    "featuredImageUrl": null,
                    "id": "PR0DUCTID",
                    "name": "Product Name",
                    "price": Object {
                      "currency": "EUR",
                      "discount": 50,
                      "info": "Price Info",
                      "unitPrice": 5,
                      "unitPriceStriked": 10,
                    },
                    "rating": Object {
                      "average": 80,
                      "count": 4,
                      "reviewCount": 3,
                    },
                  }
                }
              />
            </Portal>
            <Portal
              name="PRODUCT_ITEM_PRICE_AFTER"
              props={
                Object {
                  "productId": "PR0DUCTID",
                }
              }
            />
          </div>
        </ProductCardPrice>
      </div>
    </Link>
  </ProductCardRender>
</Provider>
`;
